--- a/GNS Secure Login/Scenes/Home/View/BatteryView/BatteryLevelView.xib
+++ b/GNS Secure Login/Scenes/Home/View/BatteryView/BatteryLevelView.xib
@@ -21,19 +21,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dQ3-IN-7RA">
-                    <rect key="frame" x="248" y="10" width="150" height="30"/>
+                    <rect key="frame" x="398" y="10" width="0.0" height="30"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CBD-g5-KDv">
-                            <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CBD-g5-KDv">
+                            <rect key="frame" x="0.0" y="0.0" width="70" height="50"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="badge-battery-level" translatesAutoresizingMaskIntoConstraints="NO" id="quy-UC-dhw">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="badge-battery-level" translatesAutoresizingMaskIntoConstraints="NO" id="quy-UC-dhw">
                                     <rect key="frame" x="5" y="0.0" width="20" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="5tk-CY-gvG"/>
                                         <constraint firstAttribute="width" constant="20" id="oKh-fz-uFG"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dpx-KM-1HS">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dpx-KM-1HS">
                                     <rect key="frame" x="30" y="7.5" width="35" height="15"/>
                                     <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="12"/>
                                     <color key="textColor" name="Text4"/>
@@ -50,17 +50,17 @@
                                 <constraint firstItem="quy-UC-dhw" firstAttribute="leading" secondItem="CBD-g5-KDv" secondAttribute="leading" constant="5" id="yoR-Gt-oiL"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P5U-YD-Ik6">
-                            <rect key="frame" x="80" y="0.0" width="70" height="30"/>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P5U-YD-Ik6">
+                            <rect key="frame" x="0.0" y="0.0" width="70" height="50"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nfc-battery-level" translatesAutoresizingMaskIntoConstraints="NO" id="Oj3-g6-nsf">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="nfc-battery-level" translatesAutoresizingMaskIntoConstraints="NO" id="Oj3-g6-nsf">
                                     <rect key="frame" x="5" y="0.0" width="20" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="19m-9i-gWT"/>
                                         <constraint firstAttribute="height" constant="30" id="QPo-XV-3Cu"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJh-Lu-Wmf">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJh-Lu-Wmf">
                                     <rect key="frame" x="30" y="7.5" width="35" height="15"/>
                                     <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="12"/>
                                     <color key="textColor" name="Text4"/>
